# limin-bench

./: .gitignore  README.md  demo.py  evaluation_run.json  likert.py  limin_bench.py  pyproject.toml  requirements.txt  test.py  test2.py
.github/workflows/: ci.yml
examples/: application_run.py  application_run_server.py  likert.py  multi_turn.py  serialization.py  single_turn.py  structured_evaluation.py
limin_bench/: __init__.py  application_run.py  base.py  datasets.py  evaluation_run.py  model_run.py  mt_bench.json
limin_bench/data/: mt_bench.json
notebooks/: mt_bench.ipynb
